[package]
name = "mano"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
x509-parser = "0.17"
md-5 = "0.10"
sha2 = "0.10"
scraper = "0.22"
hickory-resolver = "0.25"
csv = "1"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
